--- a/src/app/shell/navbar/navbar.component.html
+++ b/src/app/shell/navbar/navbar.component.html
@@ -1,149 +1,44 @@
-<section>
-    <div class="container">
-        <div class="row">
-          
-            <!-- LOGO -->
-            <div class="col-md-7 ">
-                <div class="img-nav text-center">
-                    <img src="../../../assets/images/logo.png" class="w-25 rounded-circle" alt="">
-                </div>
-            </div>
-            <div class="col-md-5">
-                <!-- navbar -->
 
-<div class="py-5">
-    
-    <nav class="menu">
-        <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open"/>
-        <label class="menu-open-button" for="menu-open">
-          <span class="hamburger hamburger-1"></span>
-          <span class="hamburger hamburger-2"></span>
-          <span class="hamburger hamburger-3"></span>
-        </label>
-        <div  class="menu-item">
-            <!-- <i class="fas fa-sign-in-alt"></i>  -->
-            <span>Language</span>
+
+<nav class="bg-mainColor">
+    <div class="">
+
+        <button class="navbar-toggler bg-mainColor ml-5 mt-5" data-target="#my-nav" data-toggle="collapse"
+            aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon text-light"> <i class="fas fa-bars"></i> </span>
+        </button>
+
+        <div id="my-nav" class="collapse navbar-collapse">
+            <ul class="list-unstyled bg-mainColor mt-5">
+                <li class="nav-item ">
+                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
+                        [routerLink]="['home']">Home </a>
+
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link mr-2  " [routerLinkActive]="['active']"
+                        [routerLink]="['trackorder']" tabindex="-1" aria-disabled="true">Track Order</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
+                        [routerLink]="['contactus']" tabindex="-1" aria-disabled="true">contact us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['login']"
+                        tabindex="-1" aria-disabled="true">Login</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['signup']"
+                        tabindex="-1" aria-disabled="true">Signup</a>
+                </li>
+
+                <li class="nav-item ">
+                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
+                        [routerLink]="['Contract']">Contract </a>
+                </li>
+            </ul>
         </div>
-        <div  class="menu-item">
-            <!-- <i class="fas fa-sign-in-alt"></i>  -->
-            <span>ContactUs</span>
-        </div>
-        <div  class="menu-item">
-            <!-- <i class="fas fa-sign-in-alt"></i>  -->
-            <span>SignUp</span>
-        </div>
-        <div  class="menu-item">
-            <!-- <i class="fas fa-sign-in-alt"></i>  -->
-            <span>Cart</span>
-        </div>
-        <div class="menu-item"> 
-            <!-- <i class="fa fa-home"></i> -->
-            <span>Home</span>
-        </div>
-       
-      </nav>
       
-      
-    
-      <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-          <defs>
-            <filter id="shadowed-goo">
-                
-                <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-                <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                <feGaussianBlur in="goo" stdDeviation="3" result="shadow" />
-                <feColorMatrix in="shadow" mode="matrix" values="0 0 0 0 0  0 0 0 0 0  0 0 0 0 0  0 0 0 1 -0.2" result="shadow" />
-                <feOffset in="shadow" dx="1" dy="1" result="shadow" />
-                <feBlend in2="shadow" in="goo" result="goo" />
-                <feBlend in2="goo" in="SourceGraphic" result="mix" />
-            </filter>
-            <filter id="goo">
-                <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-                <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                <feBlend in2="goo" in="SourceGraphic" result="mix" />
-            </filter>
-          </defs>
-      </svg>
-    </div> 
-            </div>
-
-            <!-- NavBar -->
-            <div class="col-md-12">
-                <nav class="navbar navbar-expand-lg">
-                    <div class="container">
-
-                        <button class="navbar-toggler bg-mainColor" data-target="#my-nav" data-toggle="collapse"
-                            aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon text-light"> <i class="fas fa-bars"></i> </span>
-                        </button>
-
-                        <div id="my-nav" class="collapse navbar-collapse">
-                            <ul class="navbar-nav m-auto  ">
-                                <li class="nav-item ">
-                                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
-                                        [routerLink]="['home']">Home </a>
-
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link mr-2  " [routerLinkActive]="['active']"
-                                        [routerLink]="['trackorder']" tabindex="-1" aria-disabled="true">Track Order</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
-                                        [routerLink]="['contactus']" tabindex="-1" aria-disabled="true">contact us</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['login']"
-                                        tabindex="-1" aria-disabled="true">Login</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['signup']"
-                                        tabindex="-1" aria-disabled="true">Signup</a>
-                                </li>
-
-                                <li class="nav-item ">
-                                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
-                                        [routerLink]="['Contract']">Contract </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="">
-                            <i class="fas fa-shopping-cart fa-2x "> </i>
-                            <span class="num-product"> 5 </span>
-                        </div>
-
-                    </div>
-                </nav>
-            </div>
-
-            <!-- language spinner -->
-            <div class="setting-spinner d-flex justify-align-center">
-                <div class="setting bg-light  rounded">
-                    <i (click)="showSpinnerSitting()" class="fas fa-cog fa-spin fa-2x text-mainColor "></i>
-                </div>
-                <div *ngIf="show" class=" bg-light border rounded px-3">
-                    <!-----------------------------languages----------------------->
-                    <div class="lang py-3 border-bottom">
-                        <h6 class="text-mainColor">Language</h6>
-                        <div class=" arabEng">
-                            <div class=" mr-4">
-                                <img src="../../../assets/images/saudi-arabia.png" alt="">
-                                <span>Arabic</span>
-                            </div>
-
-                            <div class="">
-                                <img src="../../../assets/images/english-language.png" alt="">
-                                <span class="">English</span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-------------------mood-------------------------->
-
-                </div>
-            </div>
-        </div>
     </div>
-</section>
-
-
+</nav>
