--- a/src/app/shell/navbar/navbar.component.scss
+++ b/src/app/shell/navbar/navbar.component.scss
@@ -122,7 +122,7 @@ body {
     border-radius: 100%;
     width: 80px;
     height: 80px;
-    // margin-left: -40px;
+    margin-left: -40px;
     position: absolute;
     // top: 20px;
     color: white;
