add pagination edit sign up home

--- a/src/app/pages/contract/contract.component.html
+++ b/src/app/pages/contract/contract.component.html
@@ -20,22 +20,19 @@
                                     <div class="border-bottom  rounded px-4 py-2 d-flex">
 
                                         <span class="   mx-3 mt-1 ">Starting </span>
-                                         <input type="date" class="form-control border-0" id="exampleInputPassword1">
+                                         <input type="date" class="form-control border-0" id="exampleInputPassword1" [(ngModel)]>
                                         <!-- <input type="date" class="form-control border-0" id="exampleInputPassword1" [(ngModel)]="contract.contract_start_date"> -->
                                     </div>
                                 </div>
-                                 <!-----------------------end Starting date --------------------->
 
                                 <!----------------------- ending date --------------------->
                                 <div class="form-group">
-                                    <!-- <label for="exampleInputEmail1">Email address</label> -->
                                     <div class="border-bottom  rounded px-4 py-2 d-flex">
 
                                         <span class="mx-3 mt-1 ">Ending </span>
                                         <input type="date" class="form-control border-0" id="exampleInputPassword1">
                                     </div>
                                 </div>
-                                <!-----------------------end ending date --------------------->
 
                                 <!----------------- delivary----------------------->
                                 <div class="form-group mt-4">
